--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 * You and 1 female
 * You and 1 male, 1 female
 * You and 2 males
-* You and 2+ males
 * You and 2 females
+* Gangbang
+? When multiple partners, usually 3 or more men, engage in sexual intercourse with a single willing partner.
 * Orgy
 ? Multiple males and females all playing at once together.
 
@@ -198,8 +199,6 @@
 (Receiving)
 * Fisting
 ? The act of placing one's hand(s) and/or arm(s) into a vagina, or receiving such actions.
-* Gangbang
-? When multiple partners, usually 3 or more, engage in sexual intercourse with a single willing partner.
 * Breath Play
 ? The act of physical control over the breathing habits of another character.  This often starts with covering mouth first, allowing sub to breathe through nose. Then covering both mouth and nose, causing sub to gasp for air but not pass out.
 * Breeding
