--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
 (General)
 * Teasing
 ? Refers to extended scenes of foreplay prior to explicit, sexual intercourse, which may be physical and/or verbal, typically to arouse one's partner to the point of sexual frustration or desperation.
-* Handjob / Fingering
-? Sexual stimulation by direct, physical contact of the hands or fingers to the genitals.
 * Blowjob
 ? Sexual stimulation by direct, physical contact of the mouth or tongue to male genitals.
 * Deep Throat
@@ -188,10 +186,10 @@
 ? Using the name "Daddy" to refer to your DOM.
 * Sir
 ? Using the name "Sir" to refer to your DOM.
-* Dirty Talk to DOM
-? You like to dirty talk to your DOM during sex and RP.
-* Dirty Talk from DOM
-? You like your DOM to talk dirty to you
+* Dirty Talk to Dom
+? You like to dirty talk to your Dom during sex and RP.
+* Dirty Talk from Dom
+? You like your Dom to talk dirty to you
 * Vocal During Sex
 ? You are/like to be loud in bed with screaming, moaning, and all that good stuff
 
