--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 
 #Misc. Fetish
 (Receiving)
-* Fisting
-? The act of placing one's hand(s) and/or arm(s) into a vagina, or receiving such actions.
 * Breath Play
 ? The act of physical control over the breathing habits of another character.  This often starts with covering mouth first, allowing sub to breathe through nose. Then covering both mouth and nose, causing sub to gasp for air but not pass out.
 * Breeding
 ? Entails the mindset of liking the idea of a act of sexual intercourse for the sole purpose of inducing pregnancy.
+* Fisting
+? The act of placing one's hand(s) and/or arm(s) into a vagina, or receiving such actions.
 * Dubious Consent
 ? Situations where one's consent is in questions, though not outright rape.
 * Non-Consent/ Rape Fantasy
@@ -215,9 +215,11 @@
 #Physicality
 (Receiving)
 * Light Spanking
-? The act of striking the buttocks of another character, lightly, still with the loud spank, but with no intent of bruising
+? The act of striking the buttocks of another character, lightly, subtle spank noise, but with no intent of bruising
+* Medium Spanking
+? The act of striking the buttocks of another character, harder than light but lighter than hard, still with the loud spank, but with possibly resulting in bruising
 * Heavy Spanking
-? The act of striking the buttocks of another character, with hard intent, possibly resulting in bruising
+? The act of striking the buttocks of another character, with hard intent to result in bruising
 * Light Face Slapping
 ? This is not done with intent to hurt, but more for the feeling and sound.
 * Medium Face Slapping
