--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
 * General Sub
 ? Catchall for Dominant/Submissive Activities, releasing control to your Dom but always knowing they can say yellow or red to pause/stop a session.  We pretend you dont have control ;)
 * Domestic Servitude
-? Being served by a butler, waitress, chauffeur, maid or housekeeper, or serving as one.
+? Being at the service of your Dom during a RP session, such as making a drink, a snack, or rubbing his shoulders, whatever he requests.
+* Slave
+? Someone who has given up all rights (A submissive has retained some rights within the context of the D/S relationship) and becomes, in effect, property, is willingly owned by a Dom 24/7. A slave is more submissive,Submissives are just playing; slaves live the lifestyle.
 * Age Gap
 ? Being in the mindset of playing in a role of a specific age selected by the sub.   The sub age being less than 18 years old such as a high school student/teacher scenario, an older age for college student/teacher or looking at the Dom as your real Daddy.
 * Daddy Dom/Little Girl
@@ -230,10 +232,6 @@
 ? The act of holding down the other character's face down
 * Hair Pulling
 ? The act of pulling or tugging on another character's hair, or being the recipient of such.
-* Shaving Dom
-? The act of removal of hair from the Dom by means of shaving
-* Shaving Sub
-? The act of removal of hair from the Sub by means of shaving
 * Foot Play
 ? The act of incorporating the feet or feet paws into the sexual context of an RP, including but not limited to the worshiping of feet, receiving sexual gratification from the sight or smell of feet and/or humping feet, sometimes to the point of orgasm.
 * Tickling
@@ -242,6 +240,10 @@
 ? Sensation play describes a wide variety of activities, both vanilla and kinky, that use the body's senses as a way to arouse and provide stimulation to a partner. Although sensation play is often related to skin sensations, it doesn't have to be so limited. Sight, taste, and hearing can also be included in sensation play.
 * Electro Stimulation
 ? The use of sex toys that carry an electrical current; sometimes painful.
+* Shaving Dom
+? The act of removal of hair from the Dom by means of shaving
+* Shaving Sub
+? The act of removal of hair from the Sub by means of shaving
 
 #Pain
 (Receiving)
