--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 (General)
 * Swallowing
 ? The act of orally consuming semen, either directly or indirectly from a penis.
+* Cream Pies
+? The act of cumming into the pussy or ass
 * Facials
 ? The act of cumming directly on to one's face.
 * Blood
