--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="widthWrapper">
            <!--  <button id="Edit"></button> -->
             <h1>Kinklist</h1>
-<!--            <select id="listType">
-              <option value="classic">Classic</option>
-              <option value="detailed">Detailed</option>
-              <option value="plsno">Please Don't</option>
+            <!-- <select id="listType" style="display:none">
+                <option value="classic">Classic</option>
+                <option value="detailed">Detailed</option>
+                <option value="plsno" >Please Don't</option>
             </select> -->
             <div class="legend">
                 <div><span data-color="#FFFFFF" class="choice notEntered"></span> <span class="legend-text">Not Entered</span></div>
@@ -36,9 +36,9 @@
                 <div id="Loading">Loading</div>
             </div>
            <!-- <button id="StartBtn"></button> -->  
-            <div id="InputList"></div>
-        </div>
-        <div id="EditOverlay" class="overlay">
+           <!-- <div id="InputList"></div> -->
+       </div>
+      <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
 #Bodies
 (General)
@@ -294,7 +294,7 @@
             </textarea>
             <button id="KinksOK">Accept</button>
         </div>
-        <div id="InputOverlay" class="overlay">
+            <div id="InputOverlay" class="overlay">
             <div class="widthWrapper">
                 <div id="InputPrevious"></div>
                 <div id="InputCurrent">
