--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div id="Loading">Loading</div>
             </div>
            <!-- <button id="StartBtn"></button> -->  
-           <!-- <div id="InputList"></div> -->
+           <div id="InputList"></div>
        </div>
       <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
