i need to set up a local editor instead of pushing commits

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 <div id="Loading">Loading</div>
             </div>
            <!-- <button id="StartBtn"></button> -->  
-           <div id="InputList"></div>
+           <div id="InputList"></div> <!-- ui renders this from kinklist_content.txt -->
+           <div id="EditOverlay">
+            <textarea id="Kinks" hidden></textarea>
+           </div>
        </div>
     </body>
 </html>
